产品和新闻插件

--- a/backend/news/templates/backend_news/menu/menu.html
+++ b/backend/news/templates/backend_news/menu/menu.html
@@ -6,7 +6,7 @@
                     {% show_menu from_level to_level extra_inactive extra_active "menu/dropdown.html" "" "" child %}
                 </div>
             {% else %}
-                <a class="nav-link" href="{{ child.get_absolute_url }}"><span>{{ child.get_menu_title }}</span></a>
+                <a class="nav-link" href="{{ child.get_absolute_url }}"><span>{{ child.get_menu_title }}111</span></a>
             {% endif %}
         </li>
     {% endfor %}
