--- a/frontend/global/scss/plugins/_djangocms-bootstrap4.scss
+++ b/frontend/global/scss/plugins/_djangocms-bootstrap4.scss
@@ -21,24 +21,24 @@
 }
 
 
-.row-plugin {
-    &--gutters {
-        &-vertical {
-            &-small {
-                @include grid-vertical-gutter-size($grid-gutter-width / 2);
-            }
-            &-normal {
-                @include grid-vertical-gutter-size($grid-gutter-width);
-            }
-            &-large {
-                @include grid-vertical-gutter-size($grid-gutter-width * 2);
-            }
-            &-extra_large {
-                @include grid-vertical-gutter-size($grid-gutter-width * 3.5);
-            }
-        }
-    }
-}
+// .row-plugin {
+//     &--gutters {
+//         &-vertical {
+//             &-small {
+//                 @include grid-vertical-gutter-size($grid-gutter-width / 2);
+//             }
+//             &-normal {
+//                 @include grid-vertical-gutter-size($grid-gutter-width);
+//             }
+//             &-large {
+//                 @include grid-vertical-gutter-size($grid-gutter-width * 2);
+//             }
+//             &-extra_large {
+//                 @include grid-vertical-gutter-size($grid-gutter-width * 3.5);
+//             }
+//         }
+//     }
+// }
 
 
 [class^='container'], [class*=' container'] {
