--- a/backend/news/templates/backend_news/base.html
+++ b/backend/news/templates/backend_news/base.html
@@ -22,7 +22,7 @@
         {% include 'djangocms_page_meta/meta.html' with meta=page_meta %}
     {% endblock meta %}
 
-    <link rel="shortcut icon" href="{% static 'global/img/logo.png' %}" type="image/x-icon"/>
+    <link rel="shortcut icon" href="{% static 'global/img/favicon.ico' %}" type="image/x-icon"/>
     {% render_block 'css' %}
 
     {% for language in languages %}
@@ -83,12 +83,7 @@
 {% cms_toolbar %}
 {% block navbar %}{% endblock %}
 {% block content_before %}{% endblock %}
-
 <div>
-
-    {% block messages %}
-        {% include 'includes/messages.html' with messages=messages %}
-    {% endblock messages %}
 
     {% block content %}{% endblock %}
 
