--- a/backend/plugins/product_plugin/templates/product_plugin/plugins/product.html
+++ b/backend/plugins/product_plugin/templates/product_plugin/plugins/product.html
@@ -1,4 +1,5 @@
 {% load i18n easy_thumbnails_tags cms_tags %}
-{% thumbnail instance.image 1200x380 crop upscale as thumb %}
-<img src="{{ thumb.url }}" alt="" />
-<div>{{instance.product.description}}</div>
+<a href="{{instance.product.id}}" style="height:100%;width:100%;display:inline-block;position:relative;padding-right:0.8rem;">
+  <img style="height:100%;width:100%" src="{{ instance.image.url }}" alt="" />
+  <span style="position:absolute;bottom:0.4rem;left:1rem;color:#fff;">{{instance.product.name}}</span>
+</a>
