--- a/frontend/global/scss/main.scss
+++ b/frontend/global/scss/main.scss
@@ -1,7 +1,321 @@
-@import 'bootstrap-variables';
+body {
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'PingFang SC', 'Hiragino Sans GB', 'Microsoft YaHei', 'Helvetica Neue', Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
+  background-color: #fff;
+  color: #4a4a4a;
+}
+// 多语言选择器
+.language-box {
+  display: flex;
+  align-items: center;
+  list-style: none;
+  li {
+    a {
+      color:#000;
+      text-decoration: none;
+    }
+  }
+}
 
-@import 'plugins/main';
-@import 'templates/main';
+// .navbar{
+//     position:fixed;left:0px;top:40px;z-index:200;width:100%;
+// }
+// 首页
+.home {
+  .products {
 
-@import 'content';
+    .card {
+      border: none;
+      border-radius: 0;
 
+      .card-body {
+        padding: 0;
+      }
+    }
+  }
+
+  .about {
+    background: url('../img/about_our.png');
+    height: 100%;
+    width: 100%;
+    padding: 3rem 1.5rem;
+
+    .services {
+      .card {
+        background: rgba(84, 84, 84, 0.2);
+        padding-top: 1rem;
+
+        img {
+          height: 64px;
+          width: 64px;
+          margin: 0 auto;
+        }
+
+        .card-body {
+          padding: 1rem 0.5rem 0 0.5rem;
+        }
+      }
+    }
+  }
+
+  .news-box {
+    .card {
+      margin: 0 auto;
+      border: none;
+      border-radius: 0;
+
+      .card-body {
+        padding: 0 0.5rem;
+      }
+    }
+  }
+}
+
+// 产品中心页面
+.my-products-views {
+  .row {
+    margin: 0 auto;
+  }
+
+  .card {
+    border: none;
+    border-radius: 0;
+
+    .card-body {
+      padding: 0;
+    }
+  }
+}
+
+// 新闻资讯页面
+.my-news-views {
+  .first-card {
+    border: 0;
+  }
+
+  .second-card {
+    border: 0;
+  }
+}
+
+// 单个产品页面
+.product-views {
+  color: #4a4a4a;
+
+  .product-detail {
+    div {
+      border: 1px solid rgba(51, 51, 51, 0.3);
+
+      div {
+        border: 0;
+      }
+
+      img {
+        max-width: 100%;
+      }
+    }
+
+    .tab-content {
+      .tab-pane {
+        padding: 0 1.5rem;
+      }
+    }
+
+    .nav-tabs {
+      background-color: #f8f8f8;
+      border: 0;
+      margin-bottom: 1rem;
+
+      .nav-item {
+        button {
+          border: 0;
+          border-radius: none;
+        }
+      }
+    }
+  }
+
+  .cms-plugin {
+    padding: 0;
+  }
+
+  .hot-product {
+    .hot-product-right {
+
+      box-sizing: border-box;
+      border: 1px solid rgba(51, 51, 51, 0.3);
+
+      .row {
+        margin-left: 0;
+      }
+
+      .card-body {
+        padding: 0;
+      }
+    }
+
+    margin-left: 0;
+
+    .card {
+      border: 0;
+    }
+
+    a {
+      padding-right: 0 !important;
+    }
+  }
+}
+
+// 关于我们
+.about-us-views {
+  .my-services {
+    padding: 0 3rem;
+    margin: 5rem 0;
+
+    .card {
+      // background: rgba(84, 84, 84, 0.2);
+      box-shadow: #d3d3d3 0px 5px 8px;
+      padding-top: 1rem;
+      border: 0;
+
+      img {
+        height: 64px;
+        width: 64px;
+        margin: 0 auto;
+      }
+
+      .card-body {
+        padding: 1rem 0.5rem 0 0.5rem;
+      }
+    }
+  }
+}
+
+.post-detail {
+  background: #fff;
+}
+
+.row {
+  justify-content: space-between;
+  margin-right: 0;
+}
+
+.post-title {
+
+  text-align: center;
+  font-size: 20px;
+  margin-bottom: 0.4rem;
+  padding: .5rem 0;
+}
+
+.post-subtitle {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  font-size: 12px;
+  margin-bottom: .4rem;
+  padding-bottom: 0.5rem;
+  color: #4a4a4a;
+
+  .publish {
+    margin-left: 0.5rem;
+  }
+}
+
+.keywords {
+  width: 100%;
+  font-size: 12px;
+  border: 1px solid #e1e1e7;
+  border-left: 4px solid #e1e1e7;
+  padding: 0.5rem;
+  margin: 0 auto;
+  margin-bottom: 0.4rem;
+  line-height: 2;
+  word-wrap: break-word;
+}
+
+.blog-content {
+  p {
+    text-align: left;
+    text-indent: 2em;
+    font-size: 16px;
+    line-height: 1.8;
+    word-wrap: break-word;
+  }
+}
+
+.post-detail-aside {
+  background: #fff;
+  margin-top: 1rem;
+  flex: 0 0 26%;
+  max-width: 26%;
+
+  .rtitle {
+    margin-top: 0.5rem;
+    font-size: 16px;
+    font-weight: bold;
+    color: #00142d;
+    position: relative;
+    border-bottom: 1px solid hsla(0, 0%, 60%, 0.15);
+    padding-bottom: 0.4rem;
+    padding-left: 0.4rem;
+    position: relative;
+    padding-left: 0.6rem;
+
+    &::before {
+      content: '';
+      position: absolute;
+      top: 5%;
+      left: 0;
+      height: 90%;
+      width: 0.3rem;
+      background: #00142d;
+    }
+  }
+}
+
+.post-item {
+  .post-item-body {
+    padding-top: 0.2rem;
+    -webkit-flex-shrink: 0;
+    -ms-flex-negative: 0;
+    flex-shrink: 0;
+    width: 100%;
+    height: 100%;
+    position: relative;
+    border-bottom: 1px solid hsla(0, 0%, 60%, 0.15);
+
+    .post-item-link {
+      display: flex;
+      align-items: center;
+      justify-content: space-evenly;
+      margin-bottom: 0.2rem;
+
+      .title {
+        color: #666;
+        font-size: 14px;
+        display: block;
+        text-overflow: ellipsis;
+        overflow: hidden;
+        white-space: nowrap;
+        flex: 1;
+      }
+
+      .post-item-date {
+        color: #999;
+        font-size: 14px;
+      }
+
+    }
+
+    .post-item-keys {
+      color: #666;
+      font-size: 14px;
+      display: block;
+      text-overflow: ellipsis;
+      overflow: hidden;
+      white-space: nowrap;
+      flex: 1;
+    }
+  }
+}
