--- a/backend/templates/whitenoise-static-files-demo.html
+++ b/backend/templates/whitenoise-static-files-demo.html
@@ -61,8 +61,8 @@
 
     {% else %}
 
-        <script defer src="{% static 'dist/vendor.js' %}" data-is-reload-on-page-edit="true"></script>
-        <script defer src="{% static 'dist/global.js' %}" data-is-reload-on-page-edit="true"></script>
+        <script defer src="{% static 'dist/vendor.bundle.js' %}" data-is-reload-on-page-edit="true"></script>
+        <script defer src="{% static 'dist/global.bundle.js' %}" data-is-reload-on-page-edit="true"></script>
 
         <link rel="stylesheet" href="{% static 'dist/vendor.css' %}">
         <link rel="stylesheet" href="{% static 'dist/global.css' %}">
