--- a/backend/plugins/news_plugin/templates/news_plugin/plugins/news.html
+++ b/backend/plugins/news_plugin/templates/news_plugin/plugins/news.html
@@ -1,13 +1,16 @@
-{% load i18n easy_thumbnails_tags cms_tags %}
-<a href="{{instance.product.id}}">
+{% load i18n easy_thumbnails_tags cms_tags parler_tags%}
+<a href="news/my/{{instance.id}}" style="display:inline-block;text-decoration:none;color:#00142d;background:#fff;padding: 0.8rem 0;">
   <div class="news-plugin-views container">
-    <div class="col col-lg-3 col-md-3 col-12 col-xl-3 col-xxl-3 col-sm-12">
-  
+    <div class="col col-lg-12 col-md-12 col-12 col-xl-12 col-xxl-12 col-sm-12" style="font-size:1rem;color:#00142d;">{{context.news.name}}</div>
+    <hr class="horizontal-line-plugin" style="margin:0.55rem 0">
+    <div style="font-size:12px">
+      {% comment %} <span style="color: #00142d;">{{instance.get_translated_field('tag')}}</span>
+      <span style="color: #888">{{instance.get_translated_field('created_at')}}</span> {% endcomment %}
+      <span style="color: #00142d;">{{context.news.tag}}</span>
+      <span style="color: #888">{{context.news.created_at}}</span>
     </div>
-    <div class="col col-lg-9 col-md-9 col-12 col-xl-9 col-xxl-9 col-sm-12"></div>
-    <a href="{{instance.product.id}}">
-      <img style="height:100%;width:100%" src="{{ instance.image.url }}" alt="" />
-      <span style="position:absolute;bottom:0.4rem;left:1rem;color:#fff;">{{instance.product.name}}</span>
-    </a>
+    <div style="margin-top:0.4rem;color:#888;font-size:12px;display: -webkit-box;-webkit-box-orient: vertical;-webkit-line-clamp: 2;overflow: hidden;text-overflow: ellipsis;white-space: normal;">
+      {{context.news.description}}
+    </div>
   </div>
 </a>
