--- a/backend/products/templates/backend_product/index.html
+++ b/backend/products/templates/backend_product/index.html
@@ -1,69 +1,30 @@
-<!DOCTYPE html>
-<html lang="en">
+{% extends 'base.html' %}
 
-<head>
-    <meta charset="UTF-8">
-    <title>产品详情页面</title>
-    <link rel="shortcut icon" type="image/x-icon" href="https://img.icons8.com/color/512/hearts.png">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
-        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <style>
-        body {
-            padding: 2rem;
-            background-color: #f8f9fa;
-            font-family: Arial, sans-serif;
-        }
 
-        .container {
-            max-width: 50%;
-            margin: 0 auto;
-            background-color: #fff;
-            border: 1px solid #ced4da;
-            border-radius: .25rem;
-            padding: 1rem;
-        }
+{% load cms_tags menu_tags sekizai_tags static %}
 
-        h1 {
-            font-size: 2rem;
-            margin-bottom: 1.5rem;
-            font-weight: bold;
-            text-align: center;
-            color: #d2232a;
-            text-shadow: 1px 1px #f8f9fa;
-        }
+{% block navbar %}
+    <nav style="padding: 0 !important;" class="navbar {% block navbar_options %}navbar-expand-lg navbar-light bg-white{% endblock %}">
+        <div class="container">
+            <a class="navbar-brand" href="/"><img style="height: 50px; padding: 10px;margin-right:20px;box-sizing: content-box;" src="/static/global/img/logo.png" alt=""></a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">{% block menubar %}{% show_menu 0 100 100 100 'menu/menu.html' %}{% endblock %}</ul>
+                {% block searchbar %}{% endblock %}
+            </div>
+        </div>
+    </nav>
+{% endblock %}
 
-        h2 {
-            font-size: 1.5rem;
-            margin-top: 2rem;
-            margin-bottom: 1.5rem;
-            font-weight: bold;
-            color: #d2232a;
-            text-shadow: 1px 1px #f8f9fa;
-        }
+{% block content %}
+    <main>
+        <div>{{product.name}}</div>
+        {% static_placeholder 'product_content' %}
+    </main>
 
-        p {
-            margin-bottom: 1rem;
-            font-size: 1rem;
-            line-height: normal;
-            color: #333;
-        }
-
-        a {
-            color: darkblue;
-        }
-
-        a:hover {
-            color: dodgerblue;
-        }
-    </style>
-</head>
-
-<body>
-    <div class="container">
-        <p>产品详情</p>
-        <p>产品详情</p>
-        <p>产品详情</p>
-        <p>产品详情</p>
-        <p>产品详情</p>
-        <p>产品详情</p>
-    </div>
+    <footer>
+        {% static_placeholder 'footer' %}
+    </footer>
+{% endblock %}
