--- a/backend/news/templates/backend_news/menu/menu.html
+++ b/backend/news/templates/backend_news/menu/menu.html
@@ -1,12 +1,12 @@
 {% load i18n menu_tags cache %}{% spaceless %}
     {% for child in children %}
-        <li class="nav-item text-center {% if child.selected %} active{% endif %} {% if child.ancestor %}ancestor{% endif %}{% if child.children %} dropdown{% endif %}">
+    <li class="nav-item text-center {% if 'news'in child.get_absolute_url  %} active {% endif %}  {% if child.selected %} active{% endif %} {% if child.ancestor %}ancestor{% endif %}{% if child.children %} dropdown{% endif %}">
             {% if child.children %}<a class="nav-link dropdown-toggle" role="button" href="{{ child.get_absolute_url }}" id="menu-{{ child.id|safe }}">{{ child.get_menu_title }}</a>
                 <div class="dropdown-menu" aria-labelledby="menu-{{ child.ancestor.id|safe }}">
                     {% show_menu from_level to_level extra_inactive extra_active "menu/dropdown.html" "" "" child %}
                 </div>
             {% else %}
-                <a class="nav-link" href="{{ child.get_absolute_url }}"><span>{{ child.get_menu_title }}111</span></a>
+                <a class="nav-link" href="{{ child.get_absolute_url }}"><span>{{ child.get_menu_title }}</span></a>
             {% endif %}
         </li>
     {% endfor %}
