--- a/backend/plugins/news_plugin/templates/news_plugin/plugins/news.html
+++ b/backend/plugins/news_plugin/templates/news_plugin/plugins/news.html
@@ -1,11 +1,31 @@
 {% load i18n easy_thumbnails_tags cms_tags parler_tags%}
-<a href="news/my/{{instance.news.id}}" style="display:inline-block;text-decoration:none;color:#00142d;background:#fff;padding: 0.8rem 0;">
-  <div class="news-plugin-views container">
+{% get_current_language as lang_code %}
+{% if instance.image.url %}
+<div  style="display:flex;text-decoration:none;color:#00142d;background:#fff;padding: 0.8rem;width:100%;border-bottom:1px solid #cbcbcb;">
+ <a href="my/{{instance.news.id}}" style="display:flex;text-decoration:none;"><img src="{{instance.image.url}}" style="width: 15rem;margin-right: 0.8rem;margin-bottom:0.8rem;"></a>
+  <div class="news-plugin-views">
+    <div class="col col-lg-12 col-md-12 col-12 col-xl-12 col-xxl-12 col-sm-12" style="font-weight:600;line-height:1.25;font-size:20px;color:#000;">{{instance.news.name}}</div>
+    <div style="margin-top:0.4rem;color:rgba(0, 0, 0, 0.45);font-size:16px;display: -webkit-box;-webkit-box-orient: vertical;-webkit-line-clamp: 3;overflow: hidden;text-overflow: ellipsis;white-space: normal;">
+      {{instance.news.description}}
+    </div>
+    <div style="margin-top: 0.6rem;font-size:12px;display:flex;align-items:center;justify-content:space-between;color:rgba(0, 0, 0, 0.45);">
+	<div>
+      		<span>{{instance.news.tag}}</span>
+      		<span style="margin-left:0.2rem;">{{instance.news.created_at}}</span>
+    	
+	</div>
+	<div>
+		<a href="my/{{instance.news.id}}" style="color:rgba(0, 0, 0, 0.45);display:flex;text-decoration:none;">{% if lang_code == 'en' %} View More >> {% else %} 查看更多 >> {% endif %}</a>
+        </div>
+    </div>
+  </div>
+</div>
+{% else %}
+<a href="news/my/{{instance.news.id}}" style="display:inline-block;text-decoration:none;color:#00142d;background:#fff;padding: 0.8rem;width:100%;">
+  <div class="news-plugin-views">
     <div class="col col-lg-12 col-md-12 col-12 col-xl-12 col-xxl-12 col-sm-12" style="font-size:1rem;color:#00142d;">{{instance.news.name}}</div>
     <hr class="horizontal-line-plugin" style="margin:0.55rem 0">
     <div style="font-size:12px">
-      {% comment %} <span style="color: #00142d;">{{instance.get_translated_field('tag')}}</span>
-      <span style="color: #888">{{instance.get_translated_field('created_at')}}</span> {% endcomment %}
       <span style="color: #00142d;">{{instance.news.tag}}</span>
       <span style="color: #888;margin-left:0.2rem;">{{instance.news.created_at}}</span>
     </div>
@@ -14,3 +34,4 @@
     </div>
   </div>
 </a>
+{% endif %}
