--- a/backend/news/templates/backend_news/index.html
+++ b/backend/news/templates/backend_news/index.html
@@ -33,8 +33,8 @@
 
 {% block content %}
     <main style="background:#f2f2f2;">
-        <div class="my_news_detail container" style="padding:0 10rem;">
-            <img src="{{news.image.url}}" style="display:block">
+	<img src="{{news.image.url}}" style="display:block;width:100%;">
+        <div class="my_news_detail container">
             <div class="row news_detail" >
                 <div class="detail_right col col-lg-9 col-md-9 col-9 col-xl-9 col-xxl-9 col-sm-12">
                     <div style="background:#fff;padding:0.75rem;">
@@ -51,17 +51,14 @@
                     <p class="title">
                         {% if lang_code == 'en'%} More Recommend {% else %} 更多推荐 {% endif %}
                     <p>
-                        <div class="swiper mySwiper" style="width:100%;height:300px">
+                        <div class="swiper mySwiper">
                             <div class="swiper-wrapper">
-                              <div class="swiper-slide">Slide 1</div>
-                              <div class="swiper-slide">Slide 2</div>
-                              <div class="swiper-slide">Slide 3</div>
-                              <div class="swiper-slide">Slide 4</div>
-                              <div class="swiper-slide">Slide 5</div>
-                              <div class="swiper-slide">Slide 6</div>
-                              <div class="swiper-slide">Slide 7</div>
-                              <div class="swiper-slide">Slide 8</div>
-                              <div class="swiper-slide">Slide 9</div>
+                               {% for related in related_news %}
+                                   <div class="swiper-slide" data-swiper-slide-index="2" style="height: 63.6px; margin-bottom: 8px;">
+                                       <div class="tit"><a href="">{{related.name}}</a><span>{{related.created_at}}</span></div>
+                                       <div class="subtit">{{related.description}}</div>
+                                   </div>
+                               {% endfor %}
                             </div>
                         </div>
                 </div>
