--- a/backend/plugins/news_plugin/templates/news_plugin/plugins/news.html
+++ b/backend/plugins/news_plugin/templates/news_plugin/plugins/news.html
@@ -21,7 +21,7 @@
   </div>
 </div>
 {% else %}
-<a href="news/my/{{instance.news.id}}" style="display:inline-block;text-decoration:none;color:#00142d;background:#fff;padding: 0.8rem;width:100%;">
+<a href="news/my/{{instance.news.id}}" style="text-align:left;display:inline-block;text-decoration:none;color:#00142d;background:#fff;padding: 0.8rem;width:100%;">
   <div class="news-plugin-views">
     <div class="col col-lg-12 col-md-12 col-12 col-xl-12 col-xxl-12 col-sm-12" style="font-size:1rem;color:#00142d;">{{instance.news.name}}</div>
     <hr class="horizontal-line-plugin" style="margin:0.55rem 0">
