--- a/frontend/global/scss/main.scss
+++ b/frontend/global/scss/main.scss
@@ -50,7 +50,7 @@ body {
   }
 
   .about {
-    background: url('../img/about_our.png');
+    background: url('http://223.254.131.55:8001/static/global/img/about_our.png');
     height: 100%;
     width: 100%;
     padding: 3rem 1.5rem;
